# liv-file

./: .env  Cargo.toml  index.html
docs/: CNAME  index.html
src/: app.rs  main.rs
src/api/: mod.rs
src/api/files/: mod.rs  route.rs
src/cores/: db.rs
