[package]
name = "liv-file"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem="1"
poem-openapi= { version="2", features=["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "mysql" ] }
once_cell="1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
# skywalking = { git="https://github.com/apache/skywalking-rust" }

